@@ -37,6 +37,7 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
 
  [Removed / test requires]
  - File::Spec::Functions
+ - JSON
  - List::Util
  - version
 
