@@ -5,7 +5,10 @@ Release history for Dist-Zilla-Plugin-Prereqs-Soften
  - Dependencies changed since 0.004000, see misc/*.deps* for details
  - configure: ↓1 (recommends: ↑1)
  - develop: +4 -3 (suggests: +2 -1)
- - test: +1 -3 (recommends: ↑2 -1)
+ - test: +1 -4 (recommends: ↑2 -1)
+
+ [Tests]
+ - use dzil distmeta for prereqs instead of sloshing through JSON
 
 0.004000 2014-03-23T13:16:51Z
  [00 Minor]
